Reorganizes project structure (#40)